    symlink_to_dir and dir_to_symlink maintscripts.  The version
    requirements are satisfied in oldoldstable.
  * dh_installdocs: Merge two chmod calls to save a fork+exec.
  * dh_strip: Disable parallelism when --dbg-package is used as it
    causes non-deterministic failures in some cases.  Thanks to
    Helmut Grohne for reporting the issue.  (Closes: #872007)

  [ Adam Conrad ]
  * dh_gencontrol: Change the synopsis of dbgsym packages so it
    follows best practises.  (Closes: #872274)

  [ Geoffrey Thomas ]
  * Support building debhelper on case-insensitive filesystems by
    moving the Debian (perl package) to the lib subdirectory.
    (Closes: #873043)

 -- Niels Thykier <niels@thykier.net>  Thu, 03 Aug 2017 19:30:01 +0000

debhelper (10.7.2) unstable; urgency=medium

  * Dh_Lib: Fix inverted boolean logic that causes a
    compatibility rule to be ignored.  Thanks to Adrian Bunk,
    Andreas Beckmann, Markus Koschany and Emmanuel Bourg for
    reporting and analysing the issue.  (Closes: #870339)

 -- Niels Thykier <niels@thykier.net>  Tue, 01 Aug 2017 16:51:58 +0000

debhelper (10.7.1) unstable; urgency=medium

  * Dh_Lib: Fix doit's new call to ensure it does not call a shell
    (like the documentation promises).
  * dh: Ensure that we do not fork a shell for running a simple
    command.
  * autoconf: Revert expansion of ${var} variables passed to
    configure as several packages implicitly assume that are not
    expanded.  E.g. liblockfile relies on ${prefix} being
    unexpanded for DESTDIR to work.  Reopens: #813266

 -- Niels Thykier <niels@thykier.net>  Mon, 31 Jul 2017 19:00:45 +0000

debhelper (10.7) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_usrlocal: Fix call to doit to avoid making it fork a shell.
  * autoconf.pm: Ditto.
  * cmake.pm: Ditto.
  * meson.pm: Ditto.
  * dh_installmodules: Ensure maintscripts are reproducible even with
    multiple kernel versions detected.