@@ -1,3 +1,5 @@
+=encoding UTF-8
+
 =head1 NAME
 
 debhelper - the debhelper tool suite
@@ -705,6 +707,20 @@ command and fail with a "command not found" error.
 
 The B<dh_makeshlibs> helper will now exit with an error if objdump
 returns failure code from analysing objdump.
+
+=item -
+
+The B<dh_installdocs> and B<dh_installexamples> tools will now
+attempt to guess the "main package" for a given documentation
+package (e.g. I<pkg-doc> will have I<pkg> as main package).
+
+When a main package is detected, I<most> documentation will be
+installed into F<< /usr/share/doc/I<main-pkg> >> as recommended
+by Debian policy §12.3 since 3.9.7.  Notably exceptions include
+the copyright file and the changelog file.
+
+The B<--doc-main-package> option can be used when the auto-detection
+is insufficient.
 
 =back
 
